--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+		<meta charset="utf-8" />
 	</head>
 
 	<body>
@@ -26,13 +27,14 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div id="quote-box" class="col-s10 offset-s1">
-							<em id="quote">Hit the button to get a random quote.</em>
+						<div id="quote" class="col-s10 offset-s1">
+							<blockquote>
+							</blockquote>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col s12 center-align">
-							<button id="submit" class="btn">submit</button>
+							<button id="submit" class="btn hide">submit</button>
 						</div>
 					</div>
 				</div>
