--- a/index.html
+++ b/index.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!--Import materialize.css-->
-		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="css/style.css" />
+  <head>
 
-		<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
 
-		<!--Let browser know website is optimized for mobile-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<meta charset="utf-8" />
-	</head>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
-	<body>
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="text/javascript" src="js/materialize.min.js"></script>
-		<script type="text/javascript" src="js/script.js"></script>
-		
-		<div id="entire-page" class="valign-wrapper center">
-			<div>
-				<div class="row">
-					<div class="col-s12">
-						<h1 id="title" class="center">Random Quote Generator</h1>
-					</div>
-				</div>
-				<div class="container">
-					<div class="row">
-						<div id="quote" class="col-s10 offset-s1">
-							<blockquote>
-							</blockquote>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col s12 center-align">
-							<button id="submit" class="btn hide">submit</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta charset="utf-8" />
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+  </head>
+
+  <body>
+    
+    <div id="entire-page" class="valign-wrapper center">
+      <div>
+        <div class="row">
+          <div class="col-s12">
+            <h1 id="title" class="center">Random Quote Generator</h1>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div id="quote" class="col-s10 offset-s1">
+              <blockquote>
+              </blockquote>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12 center-align">
+              <a href="" class="twitter-share-button btn" target="_blank">Tweet</a>
+              <button id="submit" class="btn hide">submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
