Changed the submit button to 'get quote'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="row">
             <div class="col s12 center-align">
               <a href="" class="twitter-share-button btn" target="_blank">Tweet</a>
-              <button id="submit" class="btn hide">submit</button>
+              <button id="submit" class="btn hide">get quote</button>
             </div>
           </div>
         </div>
