Add the title of the webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-
+		<title>Quote Generator</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8" />
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="js/script.js"></script>
   </head>
 
-  <body>
+  <body class="hide">
     
     <div id="entire-page" class="valign-wrapper center">
       <div>
@@ -36,11 +36,14 @@
           <div class="row">
             <div class="col s12 center-align">
               <a href="" class="twitter-share-button btn" target="_blank">Tweet</a>
-              <button id="submit" class="btn hide">get quote</button>
+              <button id="submit" class="btn">get quote</button>
             </div>
           </div>
         </div>
       </div>
+	    <div id="fixed-content">
+	    	<h6>Made by German Robayo</h6>
+	    </div>
     </div>
   </body>
 </html>
