--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8" />
+    <meta name="description" content="A random quote generator app.">
+    <meta name="author" content="German Robayo">
+    <meta name="keyword" content="Web Design, Software, Developer, HTML, CSS, PHP, JavaScript">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
